<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/loginblue"
    tools:context=".LoginPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="35dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="44dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_above="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/description_text_one"
            android:textColor="@color/colorWhite"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/description_text_two"
            android:textColor="@color/colorWhite"
            android:textSize="25dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="6"
        android:padding="30dp">
        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorWhite"
            android:drawableRight="@drawable/ic_account_circle_login"
            android:ems="10"
            android:hint="UserName"
            android:inputType="textPersonName"
            android:textColor="@color/colorBlack"/>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorWhite"
            android:drawableRight="@drawable/ic_lock_password"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/lightblue"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="25dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <TextView
            android:id="@+id/textForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorWhite" />


        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/sing_up"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>